manifests/infrastructure/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fileprocessing
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
